--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,8 +20,10 @@
         <!-- Navigation-->
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
-                <a class="navbar-brand" href="#!">Start Bootstrap</a>
-                <a class="btn btn-primary" href="#signup">Sign Up</a>
+                <a class="navbar-brand" href={% url 'index' %}>Index</a>
+                <a class="navbar-brand" href={% url 'hola' %}>Hola</a>
+                <a class="navbar-brand" href={% url 'fecha' %}>Fecha</a>
+                <a class="navbar-brand" href={% url 'ver_personas' %}>Ver personas</a>
             </div>
         </nav>
         <!-- Masthead-->
