decimosexto commit, final clase 20

--- a/home/templates/home/ver_personas.html
+++ b/home/templates/home/ver_personas.html
@@ -1,8 +1,18 @@
+{% extends 'home/index.html' %}
 
-    <a class="navbar-brand" href={% url 'index' %}>Index</a>
-    <p>Listado de personas:</p>
-    {% for persona in  personas %}
-        <li>{{persona.nombre}}{{persona.apellido}}{{persona.edad}}{{persona.fecha_nacimiento}}</li>
-    {% endfor %}
+{% block title_pagina %}
+<title>Ver personas</title>
+{% endblock title_pagina %}
 
+{% block h1_texto_header %}
+Ver personas
+{% endblock h1_texto_header %}
+
+{% block index_contenido %}
+<a class="navbar-brand" href={% url 'index' %}>Index</a>
+<p>Listado de personas:</p>
+{% for persona in  personas %}
+    <li>{{persona.nombre}}{{persona.apellido}}{{persona.edad}}{{persona.fecha_nacimiento}}</li>
+{% endfor %}
+{% endblock index_contenido %} 
 
