--- a/home/templates/padres/base.html
+++ b/home/templates/padres/base.html
@@ -7,7 +7,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         {% block title_pagina %}
-        <title>Landing Page - Start Bootstrap Theme</title>
+        <title>Base</title>
         {% endblock title_pagina %}
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
