20 commit, refactoring para entrega intermedia

--- a/home/templates/home/prueba_template.html
+++ b/home/templates/home/prueba_template.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% comment %} <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -22,4 +22,6 @@
     {% endfor %}
     </p>
 </body>
-</html>   
+</html>    {% endcomment %}
+
+<!-- contenido sin uso, para borrar -->
