--- a/home/templates/home/tu_template.html
+++ b/home/templates/home/tu_template.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% comment %} <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,4 +9,6 @@
 <body>
     <h1>Este es el template de {{persona}}</h1>
 </body>
-</html>
+</html> {% endcomment %}
+
+<!-- contenido sin uso, para borrar -->
