--- a/home/templates/padres/base.html
+++ b/home/templates/padres/base.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="navbar-brand" href={% url 'index' %}>Index</a>
-                <a class="navbar-brand" href={% url 'hola' %}>Hola</a>
+                {% comment %} <a class="navbar-brand" href={% url 'hola' %}>Hola</a> {% endcomment %}
                 <a class="navbar-brand" href={% url 'fecha' %}>Fecha</a>
                 <a class="navbar-brand" href={% url 'ver_personas' %}>Ver personas</a>
             </div>
