Branch con agregado de funcionalidades (readme, about, y otras yerbas)

--- a/home/templates/home/ver_personas.html
+++ b/home/templates/home/ver_personas.html
@@ -18,9 +18,15 @@ Ver personas
     <button> Buscar </button>
 </form>     
 <p>
-    {% for persona in  personas %}
-        <li>{{persona.nombre}}{{persona.apellido}}{{persona.edad}}{{persona.fecha_nacimiento}}</li>
-    {% endfor %}
+    {% if personas %}
+        {% for persona in  personas %}
+            <li>{{persona.nombre}}{{persona.apellido}}{{persona.edad}}{{persona.fecha_nacimiento}}</li>
+        {% endfor %}
+        
+    {% else %}
+        <p>No se encontraron resultados</p>
+    {% endif %}   
+    
 </p>
 {% endblock index_contenido %} 
 
