--- a/home/templates/padres/base.html
+++ b/home/templates/padres/base.html
@@ -22,10 +22,11 @@
         <!-- Navigation-->
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
-                <a class="navbar-brand" href={% url 'index' %}>Index</a>
+                <a class="navbar-brand" href={% url 'index' %}>Inicio</a>
                 <a class="navbar-brand" href={% url 'hola' %}>Hola</a>
                 <a class="navbar-brand" href={% url 'fecha' %}>Fecha</a>
                 <a class="navbar-brand" href={% url 'ver_personas' %}>Ver personas</a>
+                <a class="navbar-brand" href={% url 'about' %}>Sobre Nosotros</a>
             </div>
         </nav>
         <div class="container">
