commit 24, modificado error en base.html(comentado)

--- a/home/templates/padres/base.html
+++ b/home/templates/padres/base.html
@@ -24,7 +24,7 @@
             <div class="container">
                 <a class="navbar-brand" href={% url 'index' %}>Index</a>
                 {% comment %} <a class="navbar-brand" href={% url 'hola' %}>Hola</a> {% endcomment %}
-                <a class="navbar-brand" href={% url 'fecha' %}>Fecha</a>
+                {% comment %} <a class="navbar-brand" href={% url 'fecha' %}>Fecha</a> {% endcomment %}
                 <a class="navbar-brand" href={% url 'ver_personas' %}>Ver personas</a>
             </div>
         </nav>
