NO ENCUENTRO ERROR de fecha en NULL

--- a/home/templates/home/busqueda_personas.html
+++ b/home/templates/home/busqueda_personas.html
@@ -1,12 +1,8 @@
 {% extends 'padres/base.html' %}
 
 {% block title_pagina %}
-<title>Sobre Nosotros</title>
+<title>Busqueda de personas</title>
 {% endblock title_pagina %}
-
-{% block h1_texto_header %}
-Sobre Nosotros
-{% endblock h1_texto_header %}
 
 {% block mi_contenido %}
 
