--- a/home/templates/padres/base.html
+++ b/home/templates/padres/base.html
@@ -24,7 +24,8 @@
             <div class="container">
                 <a class="navbar-brand" href={% url 'index' %}>Inicio</a>
                 <a class="navbar-brand" href={% url 'ver_personas' %}>Ver personas</a>
-                <a class="navbar-brand" href={%url 'busqueda_personas' %}>Busqueda persona</a>                
+                <a class="navbar-brand" href={% url 'crear_persona' %}>Crear persona</a>
+                <a class="navbar-brand" href={% url 'busqueda_personas' %}>Busqueda persona</a>                
                 <a class="navbar-brand" href={% url 'about' %}>Sobre Nosotros</a>
             </div>
         </nav>
