--- a/home/templates/padres/base.html
+++ b/home/templates/padres/base.html
@@ -26,6 +26,7 @@
                 {% comment %} <a class="navbar-brand" href={% url 'hola' %}>Hola</a> {% endcomment %}
                 {% comment %} <a class="navbar-brand" href={% url 'fecha' %}>Fecha</a> {% endcomment %}
                 <a class="navbar-brand" href={% url 'ver_personas' %}>Ver personas</a>
+                <a class="navbar-brand" href={% url 'ver_mascotas' %}>Ver Mascotas</a>
             </div>
         </nav>
         <div class="container">
