--- a/home/templates/padres/base.html
+++ b/home/templates/padres/base.html
@@ -25,8 +25,9 @@
                 <a class="navbar-brand" href={% url 'index' %}>Index</a>
                 {% comment %} <a class="navbar-brand" href={% url 'hola' %}>Hola</a> {% endcomment %}
                 {% comment %} <a class="navbar-brand" href={% url 'fecha' %}>Fecha</a> {% endcomment %}
-                <a class="navbar-brand" href={% url 'ver_personas' %}>Ver personas</a>
+                {% comment %} <a class="navbar-brand" href={% url 'ver_personas' %}>Ver personas</a> {% endcomment %}
                 <a class="navbar-brand" href={% url 'ver_mascotas' %}>Ver Mascotas</a>
+                <a class="navbar-brand" href={% url 'login' %}>Iniciar Sesion</a>
             </div>
         </nav>
         <div class="container">
