commit 32, 1/2 clase 23, login account

--- a/home/templates/padres/base.html
+++ b/home/templates/padres/base.html
@@ -27,7 +27,12 @@
                 {% comment %} <a class="navbar-brand" href={% url 'fecha' %}>Fecha</a> {% endcomment %}
                 {% comment %} <a class="navbar-brand" href={% url 'ver_personas' %}>Ver personas</a> {% endcomment %}
                 <a class="navbar-brand" href={% url 'ver_mascotas' %}>Ver Mascotas</a>
-                <a class="navbar-brand" href={% url 'login' %}>Iniciar Sesion</a>
+                {% if request.user.is_authenticated %}
+                    <a class="navbar-brand" href='#'>{{request.user.username}}</a>
+                    <a class="navbar-brand" href={% url 'logout' %}>Cerrar Sesion</a>
+                {% else %}
+                    <a class="navbar-brand" href={% url 'login' %}>Iniciar Sesion</a>
+                {% endif %}
             </div>
         </nav>
         <div class="container">
