commit 33, final clase 23, login account

--- a/home/templates/padres/base.html
+++ b/home/templates/padres/base.html
@@ -32,6 +32,7 @@
                     <a class="navbar-brand" href={% url 'logout' %}>Cerrar Sesion</a>
                 {% else %}
                     <a class="navbar-brand" href={% url 'login' %}>Iniciar Sesion</a>
+                    <a class="navbar-brand" href={% url 'registrar' %}>Registrarse</a>
                 {% endif %}
             </div>
         </nav>
