--- a/home/templates/padres/base.html
+++ b/home/templates/padres/base.html
@@ -28,7 +28,7 @@
                 {% comment %} <a class="navbar-brand" href={% url 'ver_personas' %}>Ver personas</a> {% endcomment %}
                 <a class="navbar-brand" href={% url 'ver_mascotas' %}>Ver Mascotas</a>
                 {% if request.user.is_authenticated %}
-                    <a class="navbar-brand" href='#'>{{request.user.username}}</a>
+                    <a class="navbar-brand" href={% url 'perfil' %}>{{request.user.username}}</a>
                     <a class="navbar-brand" href={% url 'logout' %}>Cerrar Sesion</a>
                 {% else %}
                     <a class="navbar-brand" href={% url 'login' %}>Iniciar Sesion</a>
