--- a/avanzado/templates/avanzado/ver_autos.html
+++ b/avanzado/templates/avanzado/ver_autos.html
@@ -2,12 +2,12 @@
 
 
 {% block title_pagina %}
-<title>Ver mascotas</title>
+<title>Ver Autos</title>
 {% endblock title_pagina %}
 
 {% block mi_contenido %}
-<a class="navbar-brand" href={% url 'crear_mascota' %}>Crear Mascota</a>
-<p>Listado de Mascotas:</p>
+<a class="navbar-brand" href={% url 'crear_auto' %}>Crear Auto</a>
+<p>Listado de Autos:</p>
 
 {% comment %} <form action={% url 'ver_mascotas' %} method="GET">
     {{formulario}}
@@ -16,14 +16,14 @@
 <p>
     {% if object_list %}
 
-        {% for mascota in object_list %}
+        {% for auto in object_list %}
             <li>
-                {{mascota}}
+                {{auto}}
                 {% comment %} <button>
                     <a class="navbar-brand" href='#'>Editar</a>
                 </button> {% endcomment %}
-                <a href={% url 'editar_mascota' mascota.id %}>Editar</a>
-                <a href={% url 'eliminar_mascota' mascota.id %}>Eliminar</a>
+                <a href={% url 'editar_auto' auto.id %}>Editar</a>
+                <a href={% url 'eliminar_auto' auto.id %}>Eliminar</a>
             </li>
         {% endfor %}
 
