--- a/avanzado/templates/avanzado/editar_auto.html
+++ b/avanzado/templates/avanzado/editar_auto.html
@@ -1,11 +1,11 @@
 {% extends 'padres/base.html' %}
 
 {% block title_pagina %}
-<title>Editar Mascota</title>
+<title>Editar Auto</title>
 {% endblock title_pagina %}
 
 {% block mi_contenido %}
-<form action={% url 'editar_mascota' mascota.id %} method="POST">
+<form action={% url 'editar_auto' auto.id %} method="POST">
     {% csrf_token %}
     <table>
         {{form}}
