--- a/home/templates/padres/base.html
+++ b/home/templates/padres/base.html
@@ -27,6 +27,7 @@
                 {% comment %} <a class="navbar-brand" href={% url 'fecha' %}>Fecha</a> {% endcomment %}
                 {% comment %} <a class="navbar-brand" href={% url 'ver_personas' %}>Ver personas</a> {% endcomment %}
                 <a class="navbar-brand" href={% url 'ver_mascotas' %}>Ver Mascotas</a>
+                <a class="navbar-brand" href={% url 'ver_autos' %}>Ver Autos</a>
                 {% if request.user.is_authenticated %}
                     <a class="navbar-brand" href={% url 'perfil' %}>{{request.user.username}}</a>
                     <a class="navbar-brand" href={% url 'logout' %}>Cerrar Sesion</a>
