--- a/accounts/templates/accounts/perfil.html
+++ b/accounts/templates/accounts/perfil.html
@@ -10,6 +10,15 @@
     Informacion Usuario:
 </h1>  
 <p>
+    <li>
+        {% if request.user.extensionusuario.avatar%}
+        <img src={{request.user.extensionusuario.avatar.url}} alt="">
+        {% else %}
+        Imagen no cargada
+        {% endif %}
+    </li>
+</p>
+<p>
 <li>
     Nombre: {{request.user.first_name}}
 </li>    
