--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,7 +15,7 @@
                             <!-- Page heading-->
                             <h1 class="mb-5">
                                 {% block h1_texto_header %}
-                                Generate more leads with a professional landing page!
+                                PARKING LOT
                                 {% endblock h1_texto_header %}
                             </h1>
                         </div>
