--- a/avanzado/templates/avanzado/ver_vehiculos.html
+++ b/avanzado/templates/avanzado/ver_vehiculos.html
@@ -2,12 +2,12 @@
 
 
 {% block title_pagina %}
-<title>Ver Autos</title>
+<title>Vehiculos</title>
 {% endblock title_pagina %}
 
 {% block mi_contenido %}
-<a class="navbar-brand" href={% url 'crear_auto' %}>Crear Auto</a>
-<p>Listado de Autos:</p>
+<a class="navbar-brand" href={% url 'crear_vehiculo' %}>Crear Vehiculo</a>
+<p>Listado de Vehiculos:</p>
 
 {% comment %} <form action={% url 'ver_mascotas' %} method="GET">
     {{formulario}}
@@ -16,14 +16,14 @@
 <p>
     {% if object_list %}
 
-        {% for auto in object_list %}
+        {% for vehiculo in object_list %}
             <li>
-                {{auto}}
+                {{vehiculo}
                 {% comment %} <button>
                     <a class="navbar-brand" href='#'>Editar</a>
                 </button> {% endcomment %}
-                <a href={% url 'editar_auto' auto.id %}>Editar</a>
-                <a href={% url 'eliminar_auto' auto.id %}>Eliminar</a>
+                <a href={% url 'editar_vehiculo' vehiculo.id %}>Editar</a>
+                <a href={% url 'eliminar_vehiculo' vehiculo.id %}>Eliminar</a>
             </li>
         {% endfor %}
 
