commit 40, ver lista de autos sin problemas, crear con falla, DDBB con error (en vez de avanzado_vehiculo, esta avanzado_auto)

--- a/avanzado/templates/avanzado/ver_vehiculos.html
+++ b/avanzado/templates/avanzado/ver_vehiculos.html
@@ -9,16 +9,16 @@
 <a class="navbar-brand" href={% url 'crear_vehiculo' %}>Crear Vehiculo</a>
 <p>Listado de Vehiculos:</p>
 
-{% comment %} <form action={% url 'ver_mascotas' %} method="GET">
+{% comment %} <form action={% url 'ver_vehiculos' %} method="GET">
     {{formulario}}
     <button>Buscar</button>
 </form> {% endcomment %}
 <p>
-    {% if object_list %}
+    {% if vehiculos %}
 
-        {% for vehiculo in object_list %}
+        {% for vehiculo in vehiculos %}
             <li>
-                {{vehiculo}
+                {{vehiculo}}
                 {% comment %} <button>
                     <a class="navbar-brand" href='#'>Editar</a>
                 </button> {% endcomment %}
