commit 42, DDBB solucionado, crear_vehiculo solucionado

--- a/avanzado/templates/avanzado/editar_vehiculo.html
+++ b/avanzado/templates/avanzado/editar_vehiculo.html
@@ -10,6 +10,6 @@
     <table>
         {{form}}
     </table>
-    <button>Editar</button>
+    <button>Grabar</button>
 </form>       
 {% endblock mi_contenido %}
