--- a/avanzado/templates/avanzado/ver_mascotas.html
+++ b/avanzado/templates/avanzado/ver_mascotas.html
@@ -7,7 +7,7 @@
 
 {% block mi_contenido %}
 <a class="navbar-brand" href={% url 'crear_mascota' %}>Crear Mascota</a>
-<p>Listado de mascotas</p>
+<p>Listado de Mascotas:</p>
 
 {% comment %} <form action={% url 'ver_mascotas' %} method="GET">
     {{formulario}}
