--- a/accounts/templates/accounts/editar_perfil.html
+++ b/accounts/templates/accounts/editar_perfil.html
@@ -10,6 +10,6 @@
     <table>
         {{formulario}}
     </table>
-    <button>Editar</button>
+    <button>Grabar</button>
 </form>             
 {% endblock mi_contenido %}
