commit 48, agregado About

--- a/accounts/templates/accounts/about.html
+++ b/accounts/templates/accounts/about.html
@@ -1,1 +1,32 @@
-{% comment %}  {% endcomment %}
+{% extends 'padres/base.html' %}
+
+{% block title_pagina %}
+<title>Perfil</title>
+{% endblock title_pagina %}
+
+
+{% block mi_contenido %}
+<h1>
+    CODERHOUSE
+    
+    
+    
+</h1>  
+<p>
+    Curso: Python, Clase Nro 41765    
+</p>
+<p>
+    Grupo: 
+<li>
+    SIMON VARGAS RUSSO
+</li> 
+<li>
+    HORACIO BARRABASQUI
+</li>
+<li>
+    HERNAN DUFFAUR
+</li>   
+    
+</p>
+   
+{% endblock mi_contenido %}
