commit 49, agregado Consigna... falla

--- a/home/templates/padres/base.html
+++ b/home/templates/padres/base.html
@@ -50,7 +50,7 @@
                         <ul class="list-inline mb-2">
                             <li class="list-inline-item"><a href={% url 'about' %}>Grupo</a></li>
                             <li class="list-inline-item">⋅</li>
-                            <li class="list-inline-item"><a href="#!">Contact</a></li>
+                            <li class="list-inline-item"><a href={% url 'consignas' %}>Consigna Proyecto Final</a></li>
                             <li class="list-inline-item">⋅</li>
                         </ul>
                         <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2022. All Rights Reserved.</p>
