commit 50, corregido Consigna

--- a/accounts/templates/accounts/consignas.html
+++ b/accounts/templates/accounts/consignas.html
@@ -24,9 +24,12 @@
     Tener una app de mensajería en el route messages/ para que los perfiles se puedan contactar entre sí.
 </li>
 <li>
-    En caso que no quieran hacer una Web simil Blog, pueden, pero deberá tener la misma estructura el 
-    modelo básico, título, subtítulo, texto, imagen/es, autor, fecha. Y la web debe tener
-    un funcionamiento similar. 
+    <body>
+        En caso que no quieran hacer una Web simil Blog, pueden, pero deberá tener la misma estructura
+        el modelo básico, título, subtítulo, texto, imagen/es, autor, fecha. Y la web debe tener un
+        funcionamiento similar. 
+    </body>
+    
 </li>   
     
 </p>
