--- a/home/templates/padres/base.html
+++ b/home/templates/padres/base.html
@@ -61,13 +61,13 @@
                     <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
                         <ul class="list-inline mb-0">
                             <li class="list-inline-item me-4">
-                                <a href="#!"><i class="bi-facebook fs-3"></i></a>
+                                <a href="https://www.facebook.com/Coderhouse/"><i class="bi-facebook fs-3"></i></a>                                
                             </li>
                             <li class="list-inline-item me-4">
-                                <a href="#!"><i class="bi-twitter fs-3"></i></a>
+                                <a href="https://twitter.com/coderhouse?t=wDJWB0M2btCFZpi0EXZ4Sg&s=08"><i class="bi-twitter fs-3"></i></a>                                                              
                             </li>
                             <li class="list-inline-item">
-                                <a href="#!"><i class="bi-instagram fs-3"></i></a>
+                                <a href="https://instagram.com/coderhouse?igshid=YmMyMTA2M2Y="><i class="bi-instagram fs-3"></i></a>                                
                             </li>
                         </ul>
                     </div>
