--- a/home/templates/home/crear_persona.html
+++ b/home/templates/home/crear_persona.html
@@ -8,6 +8,7 @@
 <form action={% url 'crear_persona' %} method="POST">
     {% csrf_token %}
     <table>
+        {{form.media}}
         {{formulario}}
     </table>
     <button> Crear </button>
